<?xml version="1.0"?>
<package format="3">

  <name>fog_core</name>
  <version>0.0.0</version>
  <description>A package containing general stuff for fog UAVs in ROS2.</description>

  <author email="spurny@fly4future.com">Vojtech Spurny</author>
  <maintainer email="spurny@fly4future.com">Vojtech Spurny</maintainer>

  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
